--- a/ImmortalWRT/immortalwrt-24.10-DPDK.config
+++ b/ImmortalWRT/immortalwrt-24.10-DPDK.config
@@ -270,6 +270,7 @@ CONFIG_PACKAGE_luci-app-xfrpc=y
 # CONFIG_PACKAGE_luci-app-xinetd is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-yggdrasil is not set
+CONFIG_PACKAGE_luci-app-vnt=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-lucky=y
 # CONFIG_PACKAGE_wireguard-tools is not set
