--- a/.github/workflows/immortalwrt-24.10-DPDK.yml
+++ b/.github/workflows/immortalwrt-24.10-DPDK.yml
@@ -95,7 +95,9 @@ jobs:
 
     - name: Setup GCC 13
       run: |
-        sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        for i in 1 2 3; do
+          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && break || sleep 10
+        done
         sudo apt-get update
         sudo apt-get install -y gcc-13 g++-13
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 100
