--- a/.github/workflows/immortalwrt-24.10-DPDK.yml
+++ b/.github/workflows/immortalwrt-24.10-DPDK.yml
@@ -87,6 +87,8 @@ jobs:
         sudo -E apt-get -yqq install $(cat $GITHUB_WORKSPACE/depends-ubuntu-2204)
         sudo apt install -y clang-13 llvm-13
         sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.org/init_build_environment.sh)'
+        curl -fsSL https://deb.nodesource.com/setup_22.x -o nodesource_setup.sh | sudo -E bash -
+        sudo -E apt-get install -y nodejs
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
