Add kernel driver packages for network support

--- a/ImmortalWRT/immortalwrt-23.05-DPDK.config
+++ b/ImmortalWRT/immortalwrt-23.05-DPDK.config
@@ -44,8 +44,10 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=944
 # CONFIG_KERNEL_KALLSYMS is not set
 
 ### Kernel driver
+CONFIG_PACKAGE_kmod-i40e=y
 CONFIG_PACKAGE_kmod-igb=y
 CONFIG_PACKAGE_kmod-igc=y
+CONFIG_PACKAGE_kmod-ixgbe=y
 CONFIG_PACKAGE_kmod-mlx4-core=y
 CONFIG_PACKAGE_kmod-mlx5-core=y
 CONFIG_PACKAGE_kmod-mt76x2=y
