--- a/ImmortalWRT/immortalwrt-24.10-DPDK.config
+++ b/ImmortalWRT/immortalwrt-24.10-DPDK.config
@@ -91,8 +91,10 @@ CONFIG_PACKAGE_kmod-veth=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 
 ### Kernel driver
+CONFIG_PACKAGE_kmod-i40e=y
 CONFIG_PACKAGE_kmod-igb=y
 CONFIG_PACKAGE_kmod-igc=y
+CONFIG_PACKAGE_kmod-ixgbe=y
 CONFIG_PACKAGE_kmod-mlx4-core=y
 CONFIG_PACKAGE_kmod-mlx5-core=y
 CONFIG_PACKAGE_kmod-mt76x2=y
