Modify the plugin list

--- a/Lean/Lean-x86_64-rootfs.config
+++ b/Lean/Lean-x86_64-rootfs.config
@@ -111,8 +111,8 @@ CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-nf-nathelper-extra=y
-# CONFIG_PACKAGE_kmod-zram=y
-# CONFIG_PACKAGE_zram-swap=y
+# CONFIG_PACKAGE_kmod-zram is not set
+# CONFIG_PACKAGE_zram-swap is not set
 #
 #
 # 其他需要安装的软件包
@@ -121,10 +121,10 @@ CONFIG_PACKAGE_luci-app-webadmin=y
 # 流量监测控制
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_sqm-scripts=y
-# CONFIG_PACKAGE_luci-app-qos=y
-CONFIG_PACKAGE_luci-app-wrtbwmon=y
-# CONFIG_PACKAGE_luci-app-nlbwmon=n
-# CONFIG_PACKAGE_luci-app-statistics=n
+# CONFIG_PACKAGE_luci-app-qos is not set
+# CONFIG_PACKAGE_luci-app-wrtbwmon is not set
+# CONFIG_PACKAGE_luci-app-nlbwmon is not set
+# CONFIG_PACKAGE_luci-app-statistics is not set
 #
 # 内网穿透工具
 CONFIG_PACKAGE_luci-app-zerotier=n
@@ -139,10 +139,10 @@ CONFIG_PACKAGE_luci-app-diskman=y
 # CONFIG_PACKAGE_luci-app-hd-idle is not set
 #
 # 文件传输
-# CONFIG_PACKAGE_luci-app-filetransfer=y
-# CONFIG_PACKAGE_luci-app-fileassistant=y
-# CONFIG_PACKAGE_luci-app-filebrowser=y
-# CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+# CONFIG_PACKAGE_luci-app-filetransfer is not set
+# CONFIG_PACKAGE_luci-app-fileassistant is not set
+# CONFIG_PACKAGE_luci-app-filebrowser is not set
+# CONFIG_PACKAGE_luci-app-aliyundrive-webdav is not set
 # Docker
 # CONFIG_PACKAGE_luci-app-docker is not set
 # CONFIG_PACKAGE_luci-app-dockerman is not set
@@ -269,10 +269,10 @@ CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_DEFAULT_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-store=y
-#CONFIG_PACKAGE_acpid=y
+#CONFIG_PACKAGE_acpid is not set
 # CONFIG_PACKAGE_luci-app-ntpc is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-udpxy=y
+# CONFIG_PACKAGE_luci-app-udpxy is not set
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-natmap=y
 # CONFIG_PACKAGE_luci-app-netdata is not set
@@ -344,7 +344,7 @@ CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-tproxy=y
 # CONFIG_PACKAGE_kmod-shortcut-fe is not set
 # CONFIG_PACKAGE_kmod-shortcut-fe-cm is not set
-# CONFIG_PACKAGE_kmod-tcp-bbr is not set
+CONFIG_PACKAGE_kmod-tcp-bbr=y
 # CONFIG_PACKAGE_kmod-wireguard is not set
 CONFIG_PACKAGE_lm-sensors-detect=y
 CONFIG_PACKAGE_lsblk=y
