Add Nikki Mihomo plugin

--- a/ImmortalWRT/immortalwrt-23.05-DPDK.config
+++ b/ImmortalWRT/immortalwrt-23.05-DPDK.config
@@ -273,7 +273,7 @@ CONFIG_PACKAGE_luci-app-passwall2_Nftables_Transparent_Proxy=y
 # CONFIG_PACKAGE_luci-app-mihomo is not set
 #
 # FullCombo Homo
-CONFIG_PACKAGE_luci-app-fchomo=y
+# CONFIG_PACKAGE_luci-app-fchomo is not set
 #
 # SSR-Plus
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
